Project development. Minor spacing bugfixes to the projects page. Updated the projects page to use the simple hero.

--- a/app/components/Hero/Hero.module.scss
+++ b/app/components/Hero/Hero.module.scss
@@ -16,6 +16,7 @@
   margin: 0 auto;
   min-height: 0;
   justify-content: flex-start;
+  text-align: left;
 }
 
 .link {
