--- a/app/components/ProjectList/ProjectList.module.scss
+++ b/app/components/ProjectList/ProjectList.module.scss
@@ -4,6 +4,7 @@
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 1em;
+  box-sizing: border-box;
 }
 
 .list {
@@ -13,6 +14,6 @@
 }
 
 .listItem {
-  padding: 1em;
+  padding: 1em 0;
   border-bottom: 1px solid $color-white;
 }
